Revert "changed the way relevant files are filtered out again."
This reverts commit 045ad095321a197a2045e20a9a5709394c71da51.